# nasiba_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
app/: main.py
app/api/: third_party.py
app/core/: config.py  database.py
app/crud/: third_party.py
app/models/: third_party.py
app/schemas/: third_party.py
tests/: test_api.py
